# neoprism

./: .cardano-prism-config.json  .dockerignore  .gitignore  .sqlfluff  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  cursor  flake.nix  mainnet  oura-daemon.toml  package-lock.json  package.json  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/workflows/: checks.yml  integration-test.yml  integration.yml  release.yml
.helix/: languages.toml
bindings/wasm/: Cargo.toml
docker/: Dockerfile  compose-dbsync.yml  compose-preprod.yaml  compose-preview.yaml  compose-testnet-local.yml  compose.yaml  compose.yml  docker-compose.yml
docker/.config/: cardano-dbsync.dhall  cardano-node.dhall  cardano-wallet.dhall  cloud-agent.dhall  db.dhall  docker.dhall  indexer.dhall  main.cue  main.dhall  neoprism.dhall  prelude.dhall  prism-node.dhall
docker/hurl/: init.hurl
docker/mainnet-dbsync/: compose.yml
docker/mainnet-relay/: compose.yml
docker/preprod-relay/: compose.yml
docker/prism-test/: compose-ci.yml  compose.yml
docker/testnet-local/: byron-genesis.json  compose-manual.yml  compose.yml  configuration.yaml  conway-genesis.json  current-stake-pools.json  dbsync-config.yaml  init-wallet.hurl  shelley-genesis.json  topology-bp.json
docs/diagrams/: deployment.py  pyproject.toml
indexer-node/: Cargo.toml
indexer-node/examples/: seed_data.rs
indexer-node/src/: cli.rs  lib.rs  main.rs
indexer-node/src/app/: worker.rs
indexer-node/src/app/service/: mod.rs
indexer-node/src/http/: components.rs  mod.rs  models.rs
indexer-node/src/http/features/api/: mod.rs
indexer-node/src/http/features/ui_explorer/: views.rs
indexer-node/src/http/features/ui_resolver/: mod.rs  views.rs
indexer-storage/: Cargo.toml
indexer-storage/migrations/: 20250612062110_vdr_index.sql
indexer-storage/src/: lib.rs  pg.rs
indexer-storage/src/entity/: mod.rs
lib/apollo/: Cargo.toml
lib/apollo/src/: base64.rs  hash.rs  hex.rs  jwk.rs  lib.rs
lib/apollo/src/crypto/: ed25519.rs  mod.rs  secp256k1.rs  x25519.rs
lib/apollo/tests/: secp256k1_compat.rs
lib/did-core/: Cargo.toml
lib/did-core/src/: did.rs  did_doc.rs  error.rs  lib.rs
lib/did-core/tests/: did.rs
lib/did-prism/: Cargo.toml  build.rs
lib/did-prism-indexer/: Cargo.toml
lib/did-prism-indexer/src/: indexing.rs  lib.rs  repo.rs
lib/did-prism-indexer/src/dlt/: common.rs  dbsync.rs  error.rs  mod.rs  oura.rs
lib/did-prism-submitter/: Cargo.toml
lib/did-prism-submitter/src/: lib.rs  repo.rs
lib/did-prism-submitter/src/dlt/: cardano_wallet.rs  mod.rs
lib/did-prism/proto/: node-api.proto  prism-ssi.proto  prism-storage.proto  prism-version.proto  prism.proto
lib/did-prism/src/: dlt.rs  error.rs  lib.rs  macros.rs  prelude.rs
lib/did-prism/src/did/: did_doc.rs  error.rs  mod.rs  operation.rs
lib/did-prism/src/did/operation/: mod.rs  ssi.rs  storage.rs
lib/did-prism/src/dlt/: cardano.rs  error.rs  mod.rs  oura.rs
lib/did-prism/src/protocol/: error.rs  mod.rs  resolver.rs  v1.rs
lib/did-prism/src/repo/: mod.rs
lib/did-prism/src/test_utils/: mod.rs
lib/did-prism/src/utils/: mod.rs
lib/did-prism/tests/: scala_did_compat.rs  ssi_operation.rs  storage_operation.rs  test_utils.rs  utils.rs
lib/did-prism/tests/test_utils/: mod.rs
lib/indexer-storage/: Cargo.toml
lib/indexer-storage/src/: pg.rs
lib/node-storage/: Cargo.toml
migrations/: 20250424101829_migrate_from_seaorm.sql
nix/: cargo.nix  checks.nix  devShells.nix  input.nix  packages.nix  rustUtils.nix  sources.json
nix/checks/: default.nix  neoprism-checks.nix
nix/devShells/: cardano.nix  config-gen.nix  default.nix  neoprism.nix  prism-test.nix  release.nix  testnet-local.nix
nix/pkgsInternal/: default.nix  prism-cli.nix
prism-core/: Cargo.toml
prism-core/proto/: prism.proto
prism-core/src/: error.rs  lib.rs  macros.rs  prelude.rs  util.rs
prism-core/src/crypto/: codec.rs  ec.rs  ed25519.rs  hash.rs  mod.rs  secp256k1.rs  x25519.rs
prism-core/src/did/: error.rs  mod.rs  operation.rs  operation_tests.rs
prism-core/src/dlt/: cardano.rs  error.rs  mod.rs
prism-core/src/protocol/: error.rs  mod.rs  protocol_tests.rs  resolver.rs  v1.rs
prism-core/src/repo/: mod.rs
prism-core/src/store/: mod.rs  surreal.rs
prism-core/src/utils/: codec.rs  hash.rs  mod.rs  paging.rs
prism-core/tests/: resolver.rs  secp256k1_compat.rs  secp256k1_verification.rs
prism-core/tests/common/: mod.rs
prism-migration/: Cargo.toml
prism-migration/src/: lib.rs  m20240701_000001_create_table.rs  main.rs
prism-node/: Cargo.toml  tailwind.config.js  tailwind.css
prism-node/assets/: tailwind.css
prism-node/src/: app.rs  cli.rs  exec.rs  lib.rs  main.rs  util.rs
prism-node/src/app/: handler.rs  mod.rs  service.rs  worker.rs
prism-node/src/app/service/: error.rs  mod.rs
prism-node/src/http/: components.rs  contract.rs  home.rs  mod.rs  model.rs  models.rs  response.rs  routes.rs  urls.rs
prism-node/src/http/api/: mod.rs  models.rs  routes.rs
prism-node/src/http/features/api/: mod.rs
prism-node/src/http/features/ui_explorer/: mod.rs  models.rs  views.rs
prism-node/src/http/features/ui_resolver/: mod.rs  models.rs  views.rs
prism-node/src/http/route/: api.rs
prism-node/src/http/ui_explorer/: mod.rs  models.rs  routes.rs  views.rs
prism-node/src/http/ui_resolver/: mod.rs  views.rs
prism-node/src/http/views/: components.rs  explorer.rs  mod.rs  resolver.rs
prism-persistence/: Cargo.toml
prism-persistence/src/: db.rs  lib.rs  main.rs
prism-persistence/src/entity/: dlt_cursor.rs  mod.rs  prelude.rs  raw_operation.rs
prism-persistence/src/migration/: m20220101_000001_create_table.rs  mod.rs
prism-persistence/src/util/: conv.rs
prism-storage/: Cargo.toml
prism-storage/migrations/: 0001_create_tables.sql  20250424101829_migrate_from_seaorm.sql
prism-storage/src/: db.rs  lib.rs  table.rs
prism-storage/src/entity/: dlt_cursor.rs  mod.rs  prelude.rs  raw_operation.rs
prism-storage/src/entity2/: mod.rs
service/indexer-node/: Cargo.toml  tailwind.css
tests/prism-test/: .gitignore  (+4 more)
(+79 files in other folders)
