[workspace]
members = ["prism-core", "prism-node", "prism-storage"]
resolver = "3"


[workspace.dependencies]
# general
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = "4"
derive_more = "2"
dioxus = "0.6"
dioxus-ssr = "0.6"
enum_dispatch = "0.3"
hex = "0.4"
html-escape = "0.2"
im-rc = "15"
lazybe = "0.1"
oura = "1"
regex = "1"
rocket = "0.5"
serde = "1"
serde_json = "1"
strum = "0.27"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uriparse = "0.6"
# db
sqlx = "0.8"
sea-query = "0.32"
# crypto
ed25519-dalek = "2"
k256 = "0.13"
ring = "0.17"
x25519-dalek = "2"
# proto
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
