[workspace]
resolver = "3"
members = [
  "lib/apollo",
  "lib/did-core",
  "lib/did-prism",
  "lib/did-prism-indexer",
  "lib/indexer-storage",
  "service/indexer-node",
]

[workspace.package]
version = "0.1.0-rc.2"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# internal
identus-apollo = { path = "lib/apollo" }
identus-did-core = { path = "lib/did-core" }
identus-did-prism = { path = "lib/did-prism" }
identus-did-prism-indexer = { path = "lib/did-prism-indexer" }
indexer-storage = { path = "lib/indexer-storage" }
# general
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = "0.4"
clap = "4"
derive_more = "2"
enum_dispatch = "0.3"
im-rc = "15"
lazybe = "0.2"
maud = "0.27"
regex = "1"
serde = "1"
serde_json = "1"
strum = "0.27"
tokio = "1"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uriparse = "0.6"
utoipa = "5"
uuid = "1"
# db
sqlx = "0.8"
sea-query = "0.32"
# cardano
oura = { git = "https://github.com/patextreme/oura.git", rev = "3546c03dac9fac8b5173332c1fe5122882e7351e" }
pallas-primitives = "0.30"
# proto
protobuf = "3"
protobuf-codegen = "3"
