[package]
name = "prism-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
async-trait = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
hex = { workspace = true }
im-rc = { workspace = true }
log = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uriparse = { workspace = true }
# crypto
ed25519-dalek = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "ecdsa"] }
ring = { workspace = true }
x25519-dalek = { workspace = true }
# cardano
oura = { workspace = true, optional = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = []
full = ["cardano"]
cardano = ["dep:oura"]
