[package]
name = "prism-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
apollo = { workspace = true, features = ["base64", "hex", "jwk"] }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
enum_dispatch = { workspace = true }
im-rc = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uriparse = { workspace = true }
# crypto
ed25519-dalek = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "ecdsa"] }
ring = { workspace = true }
x25519-dalek = { workspace = true }
# cardano
oura = { workspace = true, optional = true }


[build-dependencies]
prost-build = { workspace = true }

[features]
default = []
cardano = ["dep:oura"]
