[package]
name = "prism-node"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
dioxus-ssr = { workspace = true }
dioxus = { workspace = true }
env_logger = { workspace = true }
html-escape = { workspace = true }
log = { workspace = true }
prism-core = { path = "../prism-core", features = ["full"] }
prism-migration = { path = "../prism-migration" }
prism-storage = { path = "../prism-storage" }
rocket = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
