[package]
name = "prism-node"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
maud = { workspace = true, features = ["axum"] }
prism-core = { path = "../prism-core", features = ["full"] }
prism-storage = { path = "../prism-storage" }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
