[package]
name = "prism-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
prism-core = { path = "../prism-core" }
sea-orm-migration = { version = "0.11", features = [] }
sea-orm = { version = "^0.11", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["sqlite"]
sqlite = []
