[package]
name = "prism-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true, features = ["from", "display", "error"] }
prism-core = { path = "../prism-core" }
prost = { workspace = true }
sea-query = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dependencies.sea-orm]
workspace = true
features = ["sqlx-postgres", "runtime-tokio-rustls"]
