[package]
name = "prism-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["from", "display", "error"] }
lazybe = { workspace = true, features = ["postgres"] }
prism-core = { path = "../prism-core" }
prost = { workspace = true }
sea-query = { workspace = true, features = [
  "backend-postgres",
  "with-uuid",
  "with-chrono",
] }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dependencies.sea-orm]
workspace = true
features = ["sqlx-postgres", "runtime-tokio-rustls"]
