[package]
name = "prism-storage"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
apollo = { workspace = true, features = ["hex"] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from", "display", "error"] }
lazybe = { workspace = true, features = ["postgres"] }
prism-core = { path = "../prism-core" }
prost = { workspace = true }
sea-query = { workspace = true, features = [
  "backend-postgres",
  "with-uuid",
  "with-chrono",
] }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tracing = { workspace = true }
