[package]
name = "apollo"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }

base64 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
hex = ["dep:hex"]
base64 = ["dep:base64"]
jwk = ["base64"]
