[package]
name = "apollo"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
serde = { workspace = true, optional = true, features = ["derive"] }
utoipa = { workspace = true, optional = true }

base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
serde = ["dep:serde"]
hex = ["dep:hex"]
base64 = ["dep:base64"]
jwk = ["base64"]
openapi = ["serde", "dep:utoipa"]
