[package]
name = "identus-did-prism-submitter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true, features = ["from", "debug", "display"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, optional = true, features = ["json"] }
utoipa = { workspace = true, optional = true }

identus-apollo = { workspace = true, features = [
  "hash",
  "hex",
  "secp256k1",
  "ed25519",
  "x25519",
] }
identus-did-prism = { workspace = true }

[features]
default = []
cardano-wallet = ["dep:reqwest"]
openapi = ["dep:utoipa"]
