[package]
name = "identus-did-prism"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
enum_dispatch = { workspace = true }
im-rc = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uriparse = { workspace = true }
# cardano
oura = { workspace = true, optional = true }

identus-did-core = { workspace = true }
identus-apollo = { workspace = true, features = [
  "hash",
  "hex",
  "secp256k1",
  "ed25519",
  "x25519",
] }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = []
cardano = ["dep:oura"]
