[package]
name = "identus-did-prism"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
chrono = { workspace = true }
derive_more = { workspace = true, features = [
  "as_ref",
  "from",
  "into",
  "debug",
  "display",
  "error",
] }
enum_dispatch = { workspace = true }
im-rc = { workspace = true }
protobuf = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uriparse = { workspace = true }

identus-did-core = { workspace = true }
identus-apollo = { workspace = true, features = [
  "hash",
  "hex",
  "secp256k1",
  "ed25519",
  "x25519",
] }

[build-dependencies]
protobuf-codegen = { workspace = true }

[features]
default = []
test-utils = []
